# rag-based-customer-support-assistant

./: .env  .gitignore  README (1).md  README.md  gitignore.txt  main.py  pyproject.toml
app/: __init__.py  application.py  config.py  graph.py  schemas.py
app/services/: __init__.py  chunking.py  embedding_service.py  escalation_store.py  pdf_service.py  vector_store.py  xai_client.py
